recursion.cons.lessons.recursion.cons.Length.scala.error
length:5: error: not found: value lengh
		1+ lengh(l.tail)
                   ^