recursion.cons.lessons.recursion.cons.Length.scala.code
def length(l:List[Int]): Int = {
	if (l==Nil){
		0
	}else {
		1+ lengh(l.tail)
	}
}
